overflow fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,8 @@
+html, .custom-body-class {
+	position:relative;
+	overflow-x:hidden;
+}
+
 body {
   font-family: "Noto Sans", sans-serif;
 }
